test/conformance/chainsaw/cleanup/policy/cleanup-pod/policy.yaml
apiVersion: kyverno.io/v2
kind: CleanupPolicy
metadata:
  name: cleanup-pod
  namespace: default
spec:
  match:
    any:
    - resources:
        kinds:
          - Pod
  conditions:
    any:
    - key: "{{ target.metadata.name }}"
      operator: Equals
      value: example
  ## execute every minute
  schedule: "*/1 * * * *"
