test/conformance/chainsaw/cleanup/policy/cleanup-pod/04-sleep.yaml
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  creationTimestamp: null
  name: sleep
spec:
  timeouts: {}
  try:
  - command:
      args:
      - "65"
      check: null
      entrypoint: sleep
